testdata/golden/sema/invalid/recursive_option_own.fmt
// scenario: recursive by-value type should be rejected (even with Option<own T>)
type Node = {
    next: Option<own Node>,
    data: int,
}

fn main() -> int { return 0; }
